🐛 fix icon align

--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@
     flex-direction: row;
     justify-content: left;
     align-items: center;
-    gap: 15px;
+    gap: 10px;
   }
   .games-title {
     display: flex;
